# explain-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  explain-rs.wasm  index.html
explain-rs-derive/: Cargo.toml
explain-rs-derive/src/: lib.rs
js/: app.js
src/: function.rs  html.rs  lib.rs  linkify.rs  main.rs  pattern.rs  util.rs
src/snippets/: mod.rs
src/snippets/nightly/: impl_trait.rs  mod.rs
src/snippets/stable/: function_args.rs  mod.rs
src/static/: index.html
